Fix: User-select on iOS

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -30,8 +30,10 @@ a, button, input {
   -webkit-tap-highlight-color: transparent;
 }
 
-a, button {
+a, button, p, span, h1, h2, h3 {
   -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   -webkit-touch-callout: none;
 }
 
@@ -822,7 +824,7 @@ svg.spinner {
   padding: 30px;
   background-color: #f3f3f3;
   box-shadow: 0px -1px 5px 0px rgba(0, 0, 0, 0.4);
-  overflow: auto;
+  overflow: scroll;
 }
 
 .help-dialog-content h1 {
